# mcux-sdk-middleware-wifi-infineon

./: CMakeLists.txt  Kconfig  README.md  west.yml
cmake/: whd-expansion.cmake  wifi-connection-manager.cmake  wifi-mfg-test-app.cmake  wifi-resources.cmake
mcux/: module.yml
submanifest/: wifi_infineon.yml
